# we-the-party

./: .gitignore  .lintstagedrc  .pylintrc  README.md  commitlint.config.js  package-lock.json  package.json  project-words.txt  pylint_init_hook.py  pyproject.toml  requirements.txt  we-the-party.code-workspace  wtp.code-workspace
.circleci/: config.yml  config_continue.yml  continue_config.yml  generated_config.yml
.github/: terraform.yaml
.husky/: post-checkout  pre-commit  prepare-commit-msg
.wtp/config/vscode/: extensions.json  folders.json  settings-minimal.json  settings-opinionated.jsonc  settings-recommended.jsonc
docs/: VS-code.md  python.md
pipeline/: constants.py  generate-config.py  generate_config.py  utils.py
pipeline/jobs/: approve-terraform-plan.yml  base.yml  deploy_infra_lambdas.yml  hello_world.yml  terraform_apply.yml  terraform_plan.yml
projects/wtp-admin/: package-lock.json
projects/wtp-infra/terraform/: terraform.tf  variables.tf
projects/wtp_admin/: package-lock.json  package.json
projects/wtp_admin_client/: package.json
projects/wtp_admin_client/terraform/: terraform.tf
projects/wtp_cli/: setup.py
projects/wtp_cli/.cov/: index.html
projects/wtp_cli/wtp_cli/: cli.py  generate.py  run.py  test.py
projects/wtp_client/: package-lock.json  package.json
projects/wtp_client/terraform/: terraform.tf
projects/wtp_infra/: README.md
terraform/core/: terraform.tf
terraform/dev/: .tfvars  terraform.tf  variables.tfvars
terraform/feature/: .tfvars  variables.tfvars
terraform/prod/: variables.tf  variables.tfvars
(+40 files in other folders)
