[tool.poetry]
name = "wethe-party"
version = "0.1.0"
description = ""
authors = ["Kevin McCartney <hello@kevinmccartney.is>"]
license = "MIT"
readme = "README.md"
packages = [{include = "projects/wtp_admin_api"}]

[tool.poetry.dependencies]
python = "^3.9"
aws-lambda-powertools = "^1.29.2"
click = "^8.1.3"
Flask = "^2.2.2"
pyjson5 = "^1.6.2"
pydantic = "^1.10.2"
bandit = {extras = ["toml"], version = "^1.7.4"}
orjson = "^3.8.0"
PyInquirer = "^1.0.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
debugpy = "^1.6.3"
pytest-watch = "^4.2.0"
pytest-cov = "^4.0.0"
mypy = "^0.982"
isort = "^5.10.1"
pylint = "^2.15.3"
black = "^22.10.0"
lxml = "^4.9.1"
flake8 = "^5.0.4"

[tool.black]
target-version = ["py39"]
include = '\.pyi?$'

[tool.mypy]
plugins = [
  "pydantic.mypy"
]
strict_optional = true
show_error_context = true
show_error_codes = true
show_column_numbers = true
strict = true
pretty = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "debugpy"
ignore_missing_imports = true

[tool.isort]
profile = "black" 
known_first_party = ["wtp_cli"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


